# Raycaster

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
raycaster/: README.md  config.py  engine.py  input.py  main.py  map.py  player.py  plugin.py  renderer.py
raycaster/core/: baserenderer.py  config.py  engine.py  events.py  input.py  interfaces.py  map.py  player.py  pygame_backend.py  renderer.py
raycaster/ecs/: components.py  ecs.py  systems.py
raycaster/examples/maps/: basic_map.json
raycaster/examples/plugins/: fps_counter.py
raycaster/plugins/: fps_counter.py
raycaster/tests/: config_test.py  configtest.py  engine_test.py  enginetest.py  events_test.py  eventstest.py  input_test.py  inputtest.py  interfacestest.py  maintest.py  map_test.py  maptest.py  playertest.py  plugin_test.py  plugintest.py  pygame_backend_test.py  pygame_backendtest.py  renderer_test.py  renderertest.py  test_main.py
