[tool.poetry]
name = "raycaster-engine"
version = "0.7.1"
description = "A modular, developer-friendly Python raycasting engine template for retro-style shooters."
authors = ["Elemental Publishing <houser2388@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ElementalPublishing/Raycaster"
homepage = "https://github.com/ElementalPublishing/Raycaster"
keywords = ["raycaster", "engine", "python", "retro", "shooter"]

[tool.poetry.dependencies]
python = ">=3.9"
pygame = "*"

[tool.poetry.scripts]
raycaster = "raycaster.main:main"

[[tool.poetry.packages]]
include = "raycaster"


[tool.poetry.group.dev.dependencies]
black = ">=22.12.0,<26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"