[tool.poetry]
name = "raycaster-engine"
version = "0.10.0"
description = "A modular, developer-friendly Python raycasting engine template for retro-style shooters."
authors = ["Elemental Publishing <houser2388@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ElementalPublishing/Raycaster"
homepage = "https://github.com/ElementalPublishing/Raycaster"
keywords = ["raycaster", "engine", "python", "retro", "shooter"]

[tool.poetry.dependencies]
python = ">=3.9"
pygame = "*"
cython = "*"
numpy = "*"
# For plugin hot-reloading and dynamic import
importlib-metadata = { version = "*", python = "<3.10" }
importlib-resources = "*"
# For type hints and static analysis
typing-extensions = "*"

[tool.poetry.scripts]
raycaster = "raycaster.main:main"

[[tool.poetry.packages]]
include = "raycaster"


[tool.poetry.group.dev.dependencies]
black = ">=22.12.0,<26.0.0"
isort = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"