[tool.poetry]
name = "raycaster-engine"
version = "1.0.1"
description = "A modular, developer-friendly Python raycasting engine template for retro-style shooters."
authors = ["Elemental Publishing <houser2388@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ElementalPublishing/Raycaster"
homepage = "https://github.com/ElementalPublishing/Raycaster"
keywords = ["raycaster", "engine", "python", "retro", "shooter"]

[tool.poetry.dependencies]
python = ">=3.9"
pygame = "*"
cython = "*"
numpy = "*"
importlib-metadata = { version = "*", python = "<3.10" }
importlib-resources = "*"
typing-extensions = "*"

[tool.poetry.scripts]
raycaster = "raycaster.main:main"

[[tool.poetry.packages]]
include = "raycaster"


[tool.poetry.group.dev.dependencies]
black = ">=22.12.0,<26.0.0"
isort = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[flake8]
max-line-length = 79

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
exclude = "raycaster/examples/"